--- a/package.json
+++ b/package.json
@@ -9,16 +9,40 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.33.3",
+    "@monaco-editor/react": "^4.7.0",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@stream-io/node-sdk": "^0.7.9",
+    "@stream-io/video-react-sdk": "^1.23.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "convex": "^1.27.5",
+    "date-fns": "^4.1.0",
+    "lucide-react": "^0.545.0",
+    "next": "^14.2.25",
+    "next-themes": "^0.4.6",
     "react": "^18",
+    "react-day-picker": "^9.11.1",
     "react-dom": "^18",
-    "next": "14.2.23"
+    "react-hot-toast": "^2.6.0",
+    "react-resizable-panels": "^3.0.6",
+    "svix": "^1.77.0",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
